Started to change the test from subprocessed doctest to more normal unittests for speedier testing

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,15 @@
 [buildout]
-parts = test
+parts = mock test
 develop = .
+
+[mock]
+recipe = plone.recipe.distros
+urls = http://www.voidspace.org.uk/cgi-bin/voidspace/downman.py?section=python&file=mock-0.3.1.zip
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = djangorecipe
+eggs = 
+  djangorecipe
+extra-paths = ${mock:location}/mock-0.3.1
+
+
