Updated the documentation with a more stable example

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,11 @@
 [buildout]
 parts = mock test
 develop = .
+versions = versions
+
+[versions]
+zc.recipe.egg = 1.0.0
+
 
 [mock]
 recipe = plone.recipe.distros
