Another go at fixing the updating problem (#250811) by making sure the update method is always called. It would not be called in the previous version since the recipe wrote a random secret (if it wasn't specified) to the options for use with a template. Buildout saw this as a change in options and therefore always decided to un-install & install.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = mock test
+parts = mock test testdjango
 develop = .
 versions = versions
 
@@ -16,3 +16,8 @@ recipe = zc.recipe.testrunner
 eggs = 
   djangorecipe
 extra-paths = ${mock:location}/mock-0.3.1
+
+[testdjango]
+recipe = djangorecipe
+project= koe
+version = http://code.djangoproject.com/svn/django/trunk@9000
