Made tests work and updated the docs for the new FCGI option

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,4 +20,4 @@ extra-paths = ${mock:location}/mock-0.3.1
 [testdjango]
 recipe = djangorecipe
 project= koe
-version = http://code.djangoproject.com/svn/django/trunk@9000
+version = 1.0
