Upped version of zc.recipe.egg and zc.recipe.testrunner.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,8 +4,8 @@ develop = .
 versions = versions
 
 [versions]
-zc.recipe.egg = 1.0.0
-zc.recipe.testrunner = 1.0.0
+zc.recipe.egg = 1.3.2
+zc.recipe.testrunner = 1.4.0
 python-dateutil = 1.4.0
 
 [mock]
@@ -16,10 +16,12 @@ urls = http://www.voidspace.org.uk/cgi-bin/voidspace/downman.py?section=python&f
 recipe = zc.recipe.testrunner
 eggs =
   djangorecipe
+  zope.interface
 extra-paths = ${mock:location}/mock-0.3.1
 
 [testdjango]
 recipe = djangorecipe
-project= koe
+project = koe
 version = trunk
-eggs = python-dateutil
+eggs =
+   python-dateutil
