Updated zc.recipe.egg and zc.recipe.testrunner to newest version. Made testcode compliant with the update.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,8 +16,8 @@ urls = http://www.voidspace.org.uk/cgi-bin/voidspace/downman.py?section=python&f
 recipe = zc.recipe.testrunner
 eggs =
   djangorecipe
-  zope.interface
 extra-paths = ${mock:location}/mock-0.3.1
+include-site-packages= false
 
 [testdjango]
 recipe = djangorecipe
