--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ versions = versions
 [versions]
 zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
-python-dateutil = 1.4.0
+python-dateutil = 1.5.0
 
 [mock]
 recipe = plone.recipe.distros
@@ -23,5 +23,4 @@ include-site-packages= false
 recipe = djangorecipe
 project = koe
 version = trunk
-eggs =
-   python-dateutil
+eggs = python-dateutil
