Removed download and svn code.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,11 +2,13 @@
 parts = mock test testdjango
 develop = .
 versions = versions
+eggs = django
 
 [versions]
 zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
 python-dateutil = 1.5.0
+django = 1.3
 
 [mock]
 recipe = plone.recipe.distros
@@ -22,5 +24,4 @@ include-site-packages= false
 [testdjango]
 recipe = djangorecipe
 project = koe
-version = trunk
 eggs = python-dateutil
