Working on removing installing django in the django recipe.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,4 +24,6 @@ include-site-packages= false
 [testdjango]
 recipe = djangorecipe
 project = koe
-eggs = python-dateutil
+eggs =
+     ${buildout:eggs}
+     python-dateutil
