Working on update mock to 0.7.2.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = mock test testdjango
+parts = test testdjango
 develop = .
 versions = versions
 eggs = django
@@ -7,18 +7,14 @@ eggs = django
 [versions]
 zc.recipe.egg = 1.3.2
 zc.recipe.testrunner = 1.4.0
-python-dateutil = 1.5.0
 django = 1.3
-
-[mock]
-recipe = plone.recipe.distros
-urls = http://www.voidspace.org.uk/cgi-bin/voidspace/downman.py?section=python&file=mock-0.3.1.zip
+mock = 0.7.2
 
 [test]
 recipe = zc.recipe.testrunner
 eggs =
   djangorecipe
-extra-paths = ${mock:location}/mock-0.3.1
+  mock
 include-site-packages= false
 
 
@@ -27,4 +23,3 @@ recipe = djangorecipe
 project = koe
 eggs =
      ${buildout:eggs}
-     python-dateutil
