--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,8 @@
 [buildout]
-parts = test testdjango
+parts = testdjango test
 develop = .
 versions = versions
-eggs = django
+
 
 [versions]
 zc.recipe.egg = 1.3.2
@@ -11,15 +11,13 @@ django = 1.3
 mock = 0.7.2
 
 [test]
-recipe = zc.recipe.testrunner
+recipe = pbp.recipe.noserunner
 eggs =
   djangorecipe
   mock
-include-site-packages= false
-
 
 [testdjango]
 recipe = djangorecipe
 project = koe
 eggs =
-     ${buildout:eggs}
+     django
