--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,11 +3,9 @@ parts = testdjango test
 develop = .
 versions = versions
 
-
 [versions]
-zc.recipe.egg = 1.3.2
-zc.recipe.testrunner = 1.4.0
-django = 1.3
+zc.buildout = 2.0.0a1
+zc.recipe.egg = 2.0.0a1
 mock = 0.7.2
 
 [test]
