--- a/base.cfg
+++ b/base.cfg
@@ -4,8 +4,8 @@ develop = .
 versions = versions
 
 [versions]
-zc.buildout = 2.0.0a1
-zc.recipe.egg = 2.0.0a1
+zc.buildout = 1.5.2
+zc.recipe.egg = 1.3.2
 mock = 0.7.2
 
 [test]
