--- a/base.cfg
+++ b/base.cfg
@@ -1,12 +1,15 @@
 [buildout]
-parts = testdjango test
+parts =
+  testdjango
+  test
+  ommelette
 develop = .
 versions = versions
 
 [versions]
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
-mock = 0.7.2
+mock = 0.8.0
 
 [test]
 recipe = pbp.recipe.noserunner
@@ -19,3 +22,10 @@ recipe = djangorecipe
 project = koe
 eggs =
      django
+
+[ommelette]
+recipe = collective.recipe.omelette
+eggs =
+  djangorecipe
+  django
+  mock
