--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,15 @@
 [buildout]
 extends = base.cfg
+parts += 
+  console_scripts
 
 [versions]
 django = 1.3
+zest.releaser = 3.34
+
+[console_scripts]
+recipe = zc.recipe.egg
+interpreter = python
+eggs =
+    zest.releaser
 
