--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: python
-# Don't build on 2.4 because 2.4 support is broken.
 python:
   - 2.5
   - 2.6
   - 2.7
 install: 
-  - pip install mock --use-mirrors
-  - pip install .
+  - python bootstrap.py
+  - bin/buildout -vn
 script:
-  - python src/djangorecipe/tests.py
-  
+  - bin/test
