Use the 'Django' package instead of 'django'
'Django' is the correct package name. PyPI is case-insensitive,
but self-hosted package indices might not be!

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ parts +=
   console_scripts
 
 [versions]
-django = 1.4
+Django = 1.4
 zest.releaser = 3.34
 
 [console_scripts]
@@ -12,4 +12,3 @@ recipe = zc.recipe.egg
 interpreter = python
 eggs =
     zest.releaser
-
