Using 'Django' as spelling in base.cfg, too. Really fixes #55.

--- a/base.cfg
+++ b/base.cfg
@@ -21,11 +21,11 @@ eggs =
 recipe = djangorecipe
 project = koe
 eggs =
-     django
+     Django
 
 [ommelette]
 recipe = collective.recipe.omelette
 eggs =
   djangorecipe
-  django
+  Django
   mock
