--- a/base.cfg
+++ b/base.cfg
@@ -7,8 +7,8 @@ develop = .
 versions = versions
 
 [versions]
-zc.buildout = 1.5.2
-zc.recipe.egg = 1.3.2
+zc.buildout = 2.0.0b1
+#zc.recipe.egg = 1.3.2
 mock = 0.8.0
 
 [test]
