Passing -t to bootstrap, needed until 2.0 final
Also removed 2.5 support (2.0 buildout doesn't support it)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: python
 python:
-  - 2.5
   - 2.6
   - 2.7
   - 3.2
   - pypy
 install: 
-  - python bootstrap.py
+  - python bootstrap.py -t
   - bin/buildout -vn
 script:
   - bin/test
