Using [test] extras_require; fixed omMelette typo

--- a/base.cfg
+++ b/base.cfg
@@ -2,7 +2,7 @@
 parts =
   testdjango
   test
-  ommelette
+  omelette
 develop = .
 versions = versions
 
@@ -15,7 +15,7 @@ mock = 0.8.0
 recipe = pbp.recipe.noserunner
 eggs =
   djangorecipe
-  mock
+  djangorecipe[test]
 
 [testdjango]
 recipe = djangorecipe
@@ -23,9 +23,8 @@ project = koe
 eggs =
      Django
 
-[ommelette]
+[omelette]
 recipe = collective.recipe.omelette
 eggs =
   djangorecipe
-  Django
-  mock
+  djangorecipe[test]
