--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
+  - 2.5
   - 2.6
   - 2.7
   - 3.2
   - pypy
 install: 
-  - python bootstrap.py -t
+  - python bootstrap.py
   - bin/buildout -vn
 script:
   - bin/test
