--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ python:
   - 3.2
   - pypy
 install:
-  - python bootstrap.py
-  - bin/buildout -vn
+  - make
 script:
-  - bin/test
+  - make test
 matrix:
   allow_failures:
     - python: pypy
     - python: 3.2
-    - python: 2.5
+    - python: 2.5, BUILDOUT_VERSION=2
