--- a/buildout2.cfg
+++ b/buildout2.cfg
@@ -1,6 +1,9 @@
 [buildout]
 extends = buildout.cfg
+find-links =
+    https://www.djangoproject.com/download/1.5c1/tarball/#egg=Django-1.5c1
 
 [versions]
 zc.buildout = 2.0.0b1
-zc.recipe.egg =
+zc.recipe.egg = 2.0.0a3
+Django = 1.5c1
