Fixed yaml syntax error

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ matrix:
   allow_failures:
     - python: pypy
     - python: 3.2
-      BUILDOUT_VERSION=1
+      BUILDOUT_VERSION: 1
     - python: 2.5
-      BUILDOUT_VERSION=2
+      BUILDOUT_VERSION: 2
