Move to buildout 2 support only.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,33 @@
 [buildout]
-extends = base.cfg
-parts +=
-  console_scripts
+find-links =
+    https://www.djangoproject.com/download/1.5c1/tarball/#egg=Django-1.5c1
+parts =
+  testdjango
+  test
+  omelette
+develop = .
+versions = versions
 
 [versions]
-Django = 1.4
-zest.releaser = 3.34
+zc.buildout = 2.0.1
+zc.recipe.egg = 2.0.0a3
+mock = 1.0.1
+Django = 1.5c1
 
-[console_scripts]
-recipe = zc.recipe.egg
-interpreter = python
+[test]
+recipe = pbp.recipe.noserunner
 eggs =
-    zest.releaser
+  djangorecipe
+  djangorecipe[test]
+
+[testdjango]
+recipe = djangorecipe
+project = koe
+eggs =
+     Django
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs =
+  djangorecipe
+  djangorecipe[test]
