--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - 2.6
   - 2.7
+  - 3.2
   - 3.3
   - pypy
 install:
@@ -11,3 +12,4 @@ script:
 matrix:
   allow_failures:
     - python: pypy
+    - python: 3.3
