--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,4 @@
 [buildout]
-find-links =
-    https://www.djangoproject.com/download/1.5c2/tarball/#egg=Django-1.5c2
 parts =
   testdjango
   test
@@ -13,7 +11,8 @@ distribute = 0.6.35
 zc.buildout = 2.0.1
 zc.recipe.egg = 2.0.0a3
 mock = 1.0.1
-Django = 1.5c2
+Django = 1.5
+
 
 [test]
 recipe = pbp.recipe.noserunner
@@ -21,11 +20,13 @@ eggs =
   djangorecipe
   djangorecipe[test]
 
+
 [testdjango]
 recipe = djangorecipe
 project = koe
 eggs =
      Django
+
 
 [omelette]
 recipe = collective.recipe.omelette
