--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,10 +6,11 @@ parts =
 develop = .
 versions = versions
 
+
 [versions]
-distribute = 0.6.35
-zc.buildout = 2.0.1
-zc.recipe.egg = 2.0.0a3
+setuptools = 1.1.6
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
 mock = 1.0.1
 Django = 1.5
 
