--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,7 @@
 [buildout]
+socket-timeout = 1
+show-picked-versions = true
+prefer-final = true
 parts =
   testdjango
   test
@@ -8,11 +11,18 @@ versions = versions
 
 
 [versions]
+# Specific pins
+Django = 1.5.5
+
+# Pinning versions reported by buildout (for faster running)
+collective.recipe.omelette = 0.16
+coverage = 3.7
+mock = 1.0.1
+nose = 1.3.0
+pbp.recipe.noserunner = 0.2.6
 setuptools = 1.1.6
 zc.buildout = 2.2.1
 zc.recipe.egg = 2.0.1
-mock = 1.0.1
-Django = 1.5
 
 
 [test]
