Added django 1.4 and 1.6 configs

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,8 @@ versions = versions
 
 
 [versions]
-# Specific pins
+# Specific pin, this one is overwritten in the other buildout configs (for 1.4
+# and 1.6).
 Django = 1.5.5
 
 # Pinning versions reported by buildout (for faster running)
