Better allow_failures matrix. See http://stackoverflow.com/a/16592494/27401

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ matrix:
   allow_failures:
     - python: pypy
     - python: 3.2
-      DJANGO_VERSION: 1.4
+      env: "DJANGO_VERSION=1.4"
     - python: 3.3
-      DJANGO_VERSION: 1.4
+      env: "DJANGO_VERSION=1.4"
