--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,7 @@ script:
 matrix:
   allow_failures:
     - python: pypy
+    - python: 3.3
+      env: "DJANGO_VERSION=1.4"
+    - python: 3.4
+      env: "DJANGO_VERSION=1.4"
